se le dio un poco de vida a la pagina

--- a/public/introMenu.html
+++ b/public/introMenu.html
@@ -13,8 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/styles.css" />
-
-    <link rel="stylesheet" href="/src/stylesPlinea.css">
+    <link rel="stylesheet" href="/src/stylesMenu.css" />
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 
@@ -29,7 +28,7 @@
       <div class="headerP">
 
         <div class="img">
-          <a href=""><img src="/images/imgPagPrinc/pizzetas.png" class="imagen"/></a>
+          <a href=""><img src="/images/pizzetas.png" class="imagen"/></a>
           <!-- <a href=""><img src="/images/bon-appetit.png" class="imagen1"/></a> -->
         </div>
 
@@ -80,60 +79,16 @@
         </nav>
       </div>
 
-        <div class="menu-linea">
-          <div class="sub.menuA">
-            <div class="clas">
-                <h3 class="id">
-                    menu1
-                </h3>
-            </div>
+        <br>
 
-            <div class="clas">
-                <h3 class="id">
-                    menu2
-                </h3>
-            </div>
+        <div class="introM">
+            <h1>haz tu pedido </h1>
 
-            <div class="clas">
-                <h3 class="id">
-                    menu3
-                </h3>
-            </div>
-          </div>
+            <h5>Pedido a Domicilio</h5>
+            <h5>Recoger en Pizzetas</h5>
 
-
-          <div class="sub.menuB">
-            <div class="clas">
-                <h3 class="id">
-                    menu1
-                </h3>
-            </div>
-
-            <div class="clas">
-                <h3 class="id">
-                    menu2
-                </h3>
-            </div>
-
-            <div class="clas">
-                <h3 class="id">
-                    menu3
-                </h3>
-            </div>
-          </div>
-
-        </div>
-
+        </div>      
       
-      <div class="footer">
-        <h5 class="uno">numero de domicilio y servicio al cliente </h5>
-        <p class="uno">Popayan</p>
-        <p class="uno">cra 13 N° 13-02</p>
-        <p class="uno">3146261044</p>
-                <!-- <a href="" title="contador visitas blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=j3ayzenqusgjgffjqh8w7m4dc1mhrmd3" title="contador visitas blogger" alt="contador visitas blogger"></a>  -->
-
-                
-      </div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
