--- a/public/promociones.html
+++ b/public/promociones.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Document</title>
+    <title>Pizzetas</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
       <div class="headerP">
 
         <div class="img">
-          <a href=""><img src="/images/pizzetas.png" class="imagen"/></a>
+          <a href=""><img src="/images/imgPagPrinc/pizzetas.png" class="imagen"/></a>
           <!-- <a href=""><img src="/images/bon-appetit.png" class="imagen1"/></a> -->
         </div>
 
@@ -93,15 +93,15 @@
             <!-- laminas -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/appetit.png" class="d-block w-100 img-fluid"/>
+                    <img src="/images/imgCarrusel/pizza-hut.jpg" class="d-block w-100 img-fluid"/>
                 </div>
 
                 <div class="carousel-item">
-                    <img src="/images/bon-appetit.png" class="d-block w-100 img-fluid"/>
+                    <img src="/images/imgCarrusel/bon-appetit.png" class="d-block w-100 img-fluid"/>
                 </div>
 
                 <div class="carousel-item">
-                  <img src="/images/pizza.jpg" class="d-block w-100 img-fluid"/>
+                  <img src="/images/imgCarrusel/pizza.jpg" class="d-block w-100 img-fluid"/>
               </div>
             <!-- ///botones -->
             </div>
