se agrego la funcionalidad al menu y la ventana modal a el archivo de contactos

--- a/public/inicio-sesion.html
+++ b/public/inicio-sesion.html
@@ -27,7 +27,7 @@
       <div class="headerP">
 
         <div class="img">
-          <a href=""><img src="/images/pizzetas.png" class="imagen"/></a>
+          <a href=""><img src="/images/imgPagPrinc/pizzetas.png" class="imagen"/></a>
           <!-- <a href=""><img src="/images/bon-appetit.png" class="imagen1"/></a> -->
         </div>
 
