--- a/public/login.html
+++ b/public/login.html
@@ -184,6 +184,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="/src/main.js"></script>
+    <script src="/src/servicesLogin.js"></script>
     
 
   </body>
