--- a/public/register.html
+++ b/public/register.html
@@ -229,6 +229,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="/src/main.js"></script>
+    <script src="/src/servicesRegister.js"></script>
     
 
   </body>
